# string-instructions

./: benchmark-sns.py  find_zero.asm  meson.build
iota/: bench.c  bigfile.asm  iota-avx.asm  iota-avx2.asm  iota-byte.asm  iota-quad.asm  iota.asm  iota.c  iota.h  main.c  meson.build  test.c
memcmp/: bench.c  bigfile.asm  main.c  memcmp-avx.asm  memcmp-avx2.asm  memcmp-cmpsb.asm  memcmp-cmpsq.asm  memcmp-vpcmpestri.asm  memcmp.asm  memcmp.c  memcmp.h  meson.build  test.c
memcpy/: bench.c  bigfile.asm  main.c  memcpy-avx.asm  memcpy-avx2.asm  memcpy-movsb-std.asm  memcpy-movsb.asm  memcpy-movsq.asm  memcpy.asm  memcpy.c  memcpy.h  meson.build  test.c
memset/: bench.c  bigfile.asm  main.c  memset-avx.asm  memset-avx2.asm  memset-stosb.asm  memset-stosq.asm  memset.asm  memset.c  memset.h  meson.build  test.c
strchr/: bench.c  meson.build  strchr.asm  strchr.c  strchr.h  test.c
strcnt/: bigfile.asm  main.c  meson.build  strcnt-avx.asm  strcnt-avx2.asm  strcnt-byte.asm  strcnt-quad.asm  strcnt-sse2.asm  strcnt-vec64.asm
strlen/: bench.c  bigfile.asm  main.c  meson.build  strlen-avx.asm  strlen-avx2.asm  strlen-scasb.asm  strlen-vec64.asm  strlen.asm  strlen.c  strlen.h  test.c
subprojects/: .gitignore  b63.wrap  libtap.wrap
subprojects/packagefiles/b63/: meson.build
subprojects/packagefiles/libtap/: meson.build
